[gd_scene load_steps=14 format=2]

[ext_resource path="res://Lobby/WaitingRoom.tscn" type="PackedScene" id=1]
[ext_resource path="res://GUI/default.theme.tres" type="Theme" id=2]
[ext_resource path="res://Lobby/Lobby.gd" type="Script" id=3]
[ext_resource path="res://Lobby/LobbyBackground.tscn" type="PackedScene" id=4]
[ext_resource path="res://GUI/criminal.svg" type="Texture" id=5]
[ext_resource path="res://GUI/cop.svg" type="Texture" id=6]
[ext_resource path="res://GUI/InGameMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://GUI/Sun.svg" type="Texture" id=8]
[ext_resource path="res://GUI/Moon.svg" type="Texture" id=9]
[ext_resource path="res://Fonts/FashionVictim.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Fonts/riesling.ttf" type="DynamicFontData" id=11]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 3
outline_color = Color( 0.392157, 0.717647, 0.980392, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
size = 95
outline_size = 2
outline_color = Color( 0.392157, 0.717647, 0.980392, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 11 )

[node name="Lobby" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="LobbyBackground" parent="." instance=ExtResource( 4 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 1 )
text = "Godot Getaway"
align = 1

[node name="CenterContainer3" type="CenterContainer" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 1024.0
margin_bottom = 104.0

[node name="HostToggle" type="OptionButton" parent="VBoxContainer/CenterContainer3"]
margin_left = 282.0
margin_right = 742.0
margin_bottom = 38.0
rect_min_size = Vector2( 460, 0 )
text = "Join Game"
align = 1
items = [ "Join Game", null, false, 0, null, "Host Game", null, false, 1, null ]
selected = 0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 1024.0
margin_bottom = 504.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 282.0
margin_right = 742.0
margin_bottom = 396.0
custom_constants/vseparation = 8
custom_constants/hseparation = 16
columns = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 2.0
margin_right = 124.0
margin_bottom = 36.0
text = "Name"
align = 2

[node name="NameTextbox" type="LineEdit" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 140.0
margin_right = 460.0
margin_bottom = 38.0
rect_min_size = Vector2( 320, 0 )
text = "Player"
align = 1
caret_blink = true
caret_blink_speed = 0.5

[node name="IPLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer" groups=["ClientOnly"]]
margin_top = 48.0
margin_right = 124.0
margin_bottom = 82.0
text = "IP"
align = 2

[node name="IPTextbox" type="LineEdit" parent="VBoxContainer/CenterContainer/GridContainer" groups=["ClientOnly"]]
margin_left = 140.0
margin_top = 46.0
margin_right = 460.0
margin_bottom = 84.0
rect_min_size = Vector2( 320, 0 )
text = "127.0.0.1"
align = 1
caret_blink = true
caret_blink_speed = 0.5

[node name="PortLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 94.0
margin_right = 124.0
margin_bottom = 128.0
text = "Port"
align = 2

[node name="PortTextbox" type="LineEdit" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 140.0
margin_top = 92.0
margin_right = 460.0
margin_bottom = 130.0
rect_min_size = Vector2( 320, 0 )
text = "32032"
align = 1
caret_blink = true
caret_blink_speed = 0.5

[node name="TeamLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 149.0
margin_right = 124.0
margin_bottom = 183.0
text = "Team"
align = 2

[node name="TeamCheck" type="ItemList" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 140.0
margin_top = 138.0
margin_right = 460.0
margin_bottom = 194.0
items = [ "", ExtResource( 5 ), false, "", ExtResource( 6 ), false ]
auto_height = true
max_columns = 2
same_column_width = true
fixed_column_width = 148
icon_mode = 0
fixed_icon_size = Vector2( 48, 48 )

[node name="TimeLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer" groups=["HostOnly"]]
margin_top = 213.0
margin_right = 124.0
margin_bottom = 247.0
text = "Time of Day"
align = 2

[node name="TimeCheck" type="ItemList" parent="VBoxContainer/CenterContainer/GridContainer" groups=["HostOnly"]]
margin_left = 140.0
margin_top = 202.0
margin_right = 460.0
margin_bottom = 258.0
items = [ "", ExtResource( 9 ), false, "", ExtResource( 8 ), false ]
auto_height = true
max_columns = 2
same_column_width = true
fixed_column_width = 148
icon_mode = 0
fixed_icon_size = Vector2( 48, 48 )

[node name="ColorPickerLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 268.0
margin_right = 124.0
margin_bottom = 302.0
text = "Car Color"
align = 2

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 140.0
margin_top = 266.0
margin_right = 460.0
margin_bottom = 304.0
edit_alpha = false

[node name="CityNameLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer" groups=["HostOnly"]]
margin_top = 314.0
margin_right = 124.0
margin_bottom = 348.0
text = "City Name"
align = 2

[node name="CitySeed" type="LineEdit" parent="VBoxContainer/CenterContainer/GridContainer" groups=["HostOnly"]]
margin_left = 140.0
margin_top = 312.0
margin_right = 460.0
margin_bottom = 350.0
align = 1

[node name="CitySizeLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer" groups=["HostOnly"]]
margin_top = 360.0
margin_right = 124.0
margin_bottom = 394.0
text = "City Size"
align = 2

[node name="CitySizePicker" type="OptionButton" parent="VBoxContainer/CenterContainer/GridContainer" groups=["HostOnly"]]
margin_left = 140.0
margin_top = 358.0
margin_right = 460.0
margin_bottom = 396.0
text = "Medium"
align = 1
items = [ "Small", null, false, 0, null, "Medium", null, false, 1, null, "Large", null, false, 2, null, "Mega", null, false, 3, null ]
selected = 1

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 508.0
margin_right = 1024.0
margin_bottom = 546.0

[node name="PlayButton" type="Button" parent="VBoxContainer/CenterContainer2"]
margin_left = 282.0
margin_right = 742.0
margin_bottom = 38.0
rect_min_size = Vector2( 460, 0 )
text = "Play Game!"

[node name="PlayerLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -110.0
margin_bottom = -10.0
custom_fonts/font = SubResource( 2 )
text = "Player's Garage"
align = 1

[node name="WaitingRoom" parent="." groups=["WaitingRoom"] instance=ExtResource( 1 )]
theme = ExtResource( 2 )

[node name="Label" parent="WaitingRoom/VBoxContainer" index="0"]
margin_bottom = 34.0

[node name="CenterContainer" parent="WaitingRoom/VBoxContainer" index="1"]
margin_top = 38.0
margin_bottom = 118.0

[node name="ItemList" parent="WaitingRoom/VBoxContainer/CenterContainer" index="0"]
margin_top = 40.0
margin_bottom = 40.0
items = [ "Player 1", null, false, "Player 2", null, false ]

[node name="OptionsButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -180.0
margin_top = 14.0
margin_right = -15.0
margin_bottom = 52.0
rect_min_size = Vector2( 165, 0 )
theme = ExtResource( 2 )
text = "Options"

[node name="InGameMenu" parent="." instance=ExtResource( 7 )]

[connection signal="tween_completed" from="LobbyBackground/Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="item_selected" from="VBoxContainer/CenterContainer3/HostToggle" to="." method="_on_HostToggle_item_selected"]
[connection signal="text_changed" from="VBoxContainer/CenterContainer/GridContainer/NameTextbox" to="." method="_on_NameTextbox_text_changed"]
[connection signal="item_selected" from="VBoxContainer/CenterContainer/GridContainer/TeamCheck" to="." method="_on_TeamCheck_item_selected"]
[connection signal="item_selected" from="VBoxContainer/CenterContainer/GridContainer/TimeCheck" to="." method="_on_TimeCheck_item_selected"]
[connection signal="color_changed" from="VBoxContainer/CenterContainer/GridContainer/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="item_selected" from="VBoxContainer/CenterContainer/GridContainer/CitySizePicker" to="." method="_on_CitySizePicker_item_selected"]
[connection signal="pressed" from="VBoxContainer/CenterContainer2/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="WaitingRoom/VBoxContainer/ReadyButton" to="." method="_on_ReadyButton_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]

[editable path="LobbyBackground"]
[editable path="WaitingRoom"]
